k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntsistemas-web-app
  namespace: ntsistemas-web
  labels:
    app: ntsistemas-web-app
spec:
  selector:
    app: ntsistemas-web-app
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
